
Wed Feb 13 13:18:12 CET 2008 Paolo Molaro <lupus@ximian.com>

	* RxCompiler.cs, RxInterpreter.cs, RxOp.cs: unicode categories and
	some grouping/capture support.

Tue Feb 12 19:16:49 CET 2008 Paolo Molaro <lupus@ximian.com>

	* RxCompiler.cs, RxInterpreter.cs, RxOp.cs: experimental new
	interpreter.

2008-02-10  Zoltan Varga  <vargaz@gmail.com>

	* replace.cs (NeedsGroupsOrCaptures): New property. Determines whenever the
	replacement process needs access to the groups or captures properties of the
	Match object.

	* Group.cs: Add an internal ctor which avoids allocations.

	* Match.cs: Ditto.

	* BaseMachine.cs interpreter.cs: Add an optimization to avoid fully creating
	Match objects during Replace () if the replacement string is simple.

	* BaseMachine.cs Regex.cs: Make LTRReplace and RTLReplace instance methods to 
	avoid creating two machines for each Regex.Replace () call.

	* interpreter.cs (Eval): Remove a needless string allocation.

2007-12-04  Arina Itkes <arinai@mainsoft.com>

	* parser.cs: Max value of m for a construct {n,m} is 2147483647.

2007-11-15  Miguel de Icaza  <miguel@novell.com>

	* Revert the patch from Juraj Skripsky as it made the class
	non-thread safe (see #341986).

2007-11-08  Raja R Harinath  <harinath@gmail.com>

	Fix 324390
	* BaseMachine.cs (LTRReplace): Don't use non-advancement of 'ptr'
	to deduce absence of matches -- a match can have length 0.
	(RTLReplace): Likewise.

2007-11-07  Raja R Harinath  <harinath@gmail.com>

	Support RegexOptions.RightToLeft in Replace().
	* BaseMachine.cs (Replace): Use either LTRReplace or RTLReplace
	based on regex.
	(LTRReplace): Make internal and rename the MatchAppendEvaluator
	version of Replace to this.
	(RTLReplace): New.
	* Regex.cs (Replace): Use LTRReplace and RTLReplace from BaseMachine.
	* replace.cs (ReplacementEvaluator.Evaluate): Optimize simple case.
	Based on patch by Stephane Delcroix.

	* replace.cs (Compile): Don't unescape string.
