@@ -1,3 +1,6 @@
+2008-02-13  Zoltan Varga  <vargaz@gmail.com>
+
+	* RxInterpreter.cs RxCompiler.cs: First version of regex IL compiler.
 
 Wed Feb 13 13:18:12 CET 2008 Paolo Molaro <lupus@ximian.com>
 
